--- a/src/input.css
+++ b/src/input.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn{
+    @apply px-5 py-3 text-sm text-white rounded-l-full rounded-r-full bg-primary-100
+}
+
+.heroPtag{
+    @apply text-black-100 w-[82%] leading-7
+}
