--- a/public/output.css
+++ b/public/output.css
@@ -900,10 +900,20 @@ input{
   background-color: #8686863D;
 }
 .btn-1{
-  border-radius: 5px;
+  border-radius: 3px;
   background-color: #333333;
   color: #ffffff;
   padding: 8px, 22px, 8px, 22px;
-  height: 40px;
-  width: 150px;
+  height: 55px;
+  width: 190px;
+}
+.style2{
+  grid-row: auto;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.style1{
+  padding-top: 80px;
+  padding-bottom: 130px;
 }
