--- a/public/output.css
+++ b/public/output.css
@@ -912,7 +912,6 @@ input{
   align-items: center;
   margin-left: 20px;
 }
-
 .style1{
   padding-top: 80px;
   padding-bottom: 130px;
@@ -923,7 +922,5 @@ input{
   margin-top: -40px;
   background-color: #D9D9D9;
   width: 80%;
-  margin-right: 40px;
-  /* justify-items: center; */
-  /* align-items: center; */
+  margin-left: 130px;
 }
