--- a/src/input.css
+++ b/src/input.css
@@ -77,11 +77,11 @@ html{
 }
 
 .cardContent1{
-    @apply text-center text-black-100 leading-[1.5em] text-xl tab:w-[70%] font-semibold mobile:text-lg mobile:w-[100%] object-cover
+    @apply text-center text-black-100 leading-[1.5em] text-xl tab:w-[70%] font-medium mobile:text-lg mobile:w-[100%] object-cover
 }
 
 .cardContent2{
-    @apply text-center text-black-100 leading-[1.5em] text-xl tab:w-[80%] font-semibold mobile:text-lg mobile:w-[100%] object-cover
+    @apply text-center text-black-100 leading-[1.5em] text-xl tab:w-[80%] font-medium mobile:text-lg mobile:w-[100%] object-cover
 }
 
 .cardSp{
@@ -93,7 +93,7 @@ html{
 }
 
 .cardContentSp{
-    @apply text-center text-tertiary-300 leading-[1.5em] text-xl tab:w-[70%] font-semibold mobile:text-lg mobile:w-[100%] object-cover
+    @apply text-center text-tertiary-300 leading-[1.5em] text-xl tab:w-[70%] font-medium mobile:text-lg mobile:w-[100%] object-cover
 }
 
 
